# fastapi-backend-template

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  logging.yaml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yaml
app/: __init__.py  config.py  database.py  main.py
app/api/: dependencies.py  models.py
app/api/auth/: auth_router.py  auth_schema.py  auth_utils.py
app/api/chats/: chats_router.py  chats_schema.py
app/api/examples/: examples_router.py
app/api/users/: users_router.py  users_schema.py  users_utils.py
app/core/examples/: examples_schema.py  examples_schema_test.py
app/utils/: logging.py
migrations/: env.py
migrations/versions/: 705b17c27dfe_create_user_table.py  e6a6342ffa74_create_chat_and_chatmessage_tables.py
scripts/: pre-startup.sh  startup.sh
tests/: init_main.py
tests/app/api/auth/: test_auth_router.py
